--- a/src/App.css
+++ b/src/App.css
@@ -41,10 +41,6 @@
   display: none;
 }
 
-input[type = 'range'] {
-  accent-color: #1DB954 ;
-}
-
 /* Styling loading */
 :root {
 	--size: 60px;
@@ -106,6 +102,125 @@ input[type = 'range'] {
   transform: translateY(0);
 }
 
+.hero-banner-container{
+  padding: 100px 40px;
+  background-color: #dcdcdc;
+  border-radius: 15px;
+  position: relative;
+  height: 500px;
+  line-height: 0.9; 
+  width: 100%;
+}
+.hero-banner-container .beats-solo{
+  font-size: 20px;
+}
+.hero-banner-container button{
+   border-radius: 15px;
+  padding: 10px 16px;
+  background-color: #f02d34;
+  color: white;
+  border: none;
+  margin-top: 40px;
+  font-size: 18px;
+  font-weight: 500;
+  cursor: pointer;
+  z-index:10000 !important;
+}
+
+.hero-bg-color {
+  background-image: linear-gradient(to right,var(--tw-gradient-stops));
+  --tw-gradient-from: #d1d5dbcc var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(209 213 219 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+  --tw-gradient-to: #f3f4f6 var(--tw-gradient-to-position)
+}
+
+.swiper-slide{
+  align-self: center;
+}
+
+.hero-banner-container h3{
+  font-size: 4rem;
+  margin-top: 4px;
+}
+.hero-banner-container h1{
+  color: white;
+  font-size: 9em;
+  margin-left: -20px;
+  text-transform: uppercase;
+}
+.hero-banner-image{
+  /* position: absolute; */
+  /* top: 0%;
+  right:20%; */
+  height: 100%;
+  width: 450px;
+}
+
+.inLoading {
+  animation: loading 1s linear infinite
+}
+
+
+@media screen and (max-width:800px) {
+  .hero-banner-container{
+    height: 560px;
+  }
+  .hero-banner-image{
+    width: 77%;
+    height: 62%;
+    /* top: -2%;
+    right: -6%; */
+  }
+  .footer-banner-container{
+    height: 560px;
+    margin-top: 80px;
+  }
+  .footer-banner-image{
+    width: 77%;
+    left: 30%;
+    top: 6%;
+    height: 56%
+  }
+  .banner-desc .left h3{
+    font-weight: 900;
+    font-size: 50px;
+    margin-left: 5px;
+  }
+  .banner-desc .left p{
+    margin:18px;
+  }
+  .banner-desc .right h3{
+    font-size: 45px;
+  }
+  .banner-desc .right p{
+    font-size: 18px;
+  }
+  .banner-desc .right .company-desc{
+    font-size: 14px;
+  }
+  .banner-desc{
+    flex-wrap: wrap;
+    gap: 20px;
+  }
+  .hero-banner-container{
+    line-height: 1.3;
+  }
+  .hero-banner-container h1{
+    font-size: 50px;
+  }
+  .hero-banner-container h3{
+    font-size: 40px;
+  }
+  .hero-banner-container button{
+    margin-top: 90px;
+    z-index: 10000;
+  }
+  .desc{
+   bottom: 60px;
+  }
+}
+
 @keyframes marquee {
   from { transform: translateX(100%); }
   to { transform: translateX(-100%); }
@@ -115,4 +230,15 @@ input[type = 'range'] {
     50% {
       transform: scaleY(0.25);
     }
+}
+@keyframes loading {
+  0%{
+    opacity: 1;
+  }
+  50%{
+    opacity: 0.3;
+  }
+  100%{
+    opacity: 1;
+  }
 }
